fixing account details overlapsing rename button

--- a/app/style/AccountRow.less
+++ b/app/style/AccountRow.less
@@ -104,6 +104,11 @@
   width: 44%;
 }
 
+.account-row-details-bottom-columns {
+  display: flex;
+  flex-direction: row;
+}
+
 .account-row-details-bottom-column-right {
   .inline-block-mixin;
 
